Rewrote the figures. Need to change them again to show how always evaluating inside Haskell boundaries causes side effects on Haskell's side and divergences when converting Haskell values to ML and Scheme.

--- a/figures/figlistfixed.tex
+++ b/figures/figlistfixed.tex
@@ -457,6 +457,6 @@ $\formvar
 }
 & $\not\red$ \\
 \end{tabular}
-\caption{Problematic Haskell argument and list conversions.}
-\label{figfun}
+\caption{Scheme does not force the conversion of list construction operands.}
+\label{figlistfixed}
 \end{figure}
