--- a/macros.tex
+++ b/macros.tex
@@ -3,8 +3,10 @@
 \newcommand{\symadd}{+}
 \newcommand{\symbrand}{b}
 \newcommand{\symcons}{cons}
+\newcommand{\symconf}{F}
+\newcommand{\symconm}{E}
+\newcommand{\symcont}{E}
 \newcommand{\symconu}{U}
-\newcommand{\symconf}{E}
 \newcommand{\symcs}{k}
 \newcommand{\symcsvar}{u}
 \newcommand{\symenv}{\Gamma}
@@ -13,7 +15,7 @@
 \newcommand{\symexp}{e}
 \newcommand{\symext}{,}
 \newcommand{\symhasty}{:}
-\newcommand{\symfield}{f}
+\newcommand{\symfield}{c}
 \newcommand{\symfix}{fix}
 \newcommand{\symfor}{\forall}
 \newcommand{\symfun}{\rightarrow}
@@ -38,7 +40,7 @@
 \newcommand{\symnil}{nil}
 \newcommand{\sympnull}{null?}
 \newcommand{\symnum}{n}
-\newcommand{\symop}{o}
+\newcommand{\symop}{a}
 \newcommand{\sympred}{p}
 \newcommand{\sympfun}{fun?}
 \newcommand{\symplist}{list?}
@@ -51,9 +53,10 @@
 \newcommand{\symtl}{tl}
 \newcommand{\symtst}{TST}
 \newcommand{\symty}{t}
-\newcommand{\symtyvar}{u}
-\newcommand{\symvalf}{w}
-\newcommand{\symvalu}{v}
+\newcommand{\symtyvar}{y}
+\newcommand{\symvalf}{f}
+\newcommand{\symvalt}{v}
+\newcommand{\symvalu}{u}
 \newcommand{\symvar}{x}
 \newcommand{\symwrong}{wrong}
 
@@ -67,7 +70,17 @@
 
 \newcommand{\varbrand}{\ensuremath{\symbrand}\xspace}
 
-\newcommand{\varconm}{\ensuremath{\mathscr{\symconf}\xspace}}
+\newcommand{\varconm}{\ensuremath{\mathscr{\symconm}\xspace}}
+
+\newcommand{\varcont}{\ensuremath{\symcont}\xspace}
+\newcommand{\varconth}{\ensuremath{\varcont\langh}\xspace}
+\newcommand{\varcontm}{\ensuremath{\varcont\langm}\xspace}
+\newcommand{\varconts}{\ensuremath{\varcont\langs}\xspace}
+
+\newcommand{\varvalt}{\ensuremath{\symvalt}\xspace}
+\newcommand{\varvalth}{\ensuremath{\varvalt\langh}\xspace}
+\newcommand{\varvaltm}{\ensuremath{\varvalt\langm}\xspace}
+\newcommand{\varvalts}{\ensuremath{\varvalt\langs}\xspace}
 
 \newcommand{\varconf}{\ensuremath{\symconf}\xspace}
 \newcommand{\varconfh}{\ensuremath{\varconf\langh}\xspace}
