Finished the list examples.

--- a/figures/figfunctionfixed.tex
+++ b/figures/figfunctionfixed.tex
@@ -38,7 +38,7 @@
 	)
 }
 {
-	\Omega
+	\Omega_\tynum
 }
 &
 \red
@@ -103,7 +103,7 @@
 	)
 }
 {
-	\Omega
+	\Omega_\tynum
 }
 &
 \red
@@ -141,7 +141,7 @@
 			\csnum
 		}
 		{
-			\Omega
+			\Omega_\tynum
 		}
 		)
 	}
@@ -163,7 +163,7 @@
 		\csnum
 	}
 	{
-		\Omega
+		\Omega_\tynum
 	}
 	)
 }
@@ -171,12 +171,12 @@
 \red
 &
 (by \varconth) \\
-$\Omega$
+$\Omega_\tynum$
 &
 $\not \red$
 &
 (by \varconth) \\
 \end{tabular}
-\caption{Scheme does not force the conversion of an argument.}
+\caption{Scheme does not force the conversion of arguments.}
 \label{figfunctionfixed}
 \end{figure}
