--- a/figures/figfunctionunfixed.tex
+++ b/figures/figfunctionunfixed.tex
@@ -38,7 +38,7 @@
 	)
 }
 {
-	\Omega
+	\Omega_\tynum
 }
 &
 \red
@@ -103,7 +103,7 @@
 	)
 }
 {
-	\Omega
+	\Omega_\tynum
 }
 &
 \red
@@ -142,7 +142,7 @@
 			\csnum
 		}
 		{
-			\Omega
+			\Omega_\tynum
 		}
 		)
 	}
@@ -154,6 +154,6 @@ $\not \red$
 (by \expfapp{\varvalts}{\varconts})
 \\
 \end{tabular}
-\caption{Scheme forces the conversion of an argument.}
+\caption{Scheme forces the conversion of arguments.}
 \label{figfunctionunfixed}
 \end{figure}
