Simplified the list examples to use wrong instead of omega.

--- a/figures/figlistunfixed.tex
+++ b/figures/figlistunfixed.tex
@@ -1,7 +1,7 @@
 \begin{figure}[tb]
 \onehalfspacing
 \centering
-\begin{tabular}{lll}
+\begin{tabular}{ll}
 % sh {N} (cons (wrong N str) (nil N))
 \expsh
 {
