--- a/figures/figlistfixed.tex
+++ b/figures/figlistfixed.tex
@@ -1,8 +1,8 @@
 \begin{figure}[tb]
 \onehalfspacing
 \centering
-\begin{tabular}{lll}
-% sh {N} (cons OmegaN Omega{N})
+\begin{tabular}{ll}
+% sh {N} (cons (wrong N str) (nil N))
 \expsh
 {
 	\tylist
@@ -14,24 +14,30 @@
 	(
 	\expcons
 	{
-		\Omega_\csnum
+		(
+		\expwrongs
+		{
+			\tynum
+		}
+		{
+			\errnum
+		}
+		)
 	}
 	{
-		\Omega_
+		(
+		\expnils
 		{
-			\tylist
-			{
-				\csnum
-			}
+			\tynum
 		}
+		)
 	}
 	)
 }
 &
 \red
-&
-(by \varconts) \\
-% cons (sh N OmegaN) (sh {N} Omega{N})
+\\
+% cons (sh N (wrong N str)) (sh {N} (nil N))
 \expcons
 {
 	(
@@ -40,7 +46,15 @@
 		\csnum
 	}
 	{
-		\Omega_\csnum
+		(
+		\expwrongs
+		{
+			\tynum
+		}
+		{
+			\errnum
+		}
+		)
 	}
 	)
 }
@@ -54,17 +68,49 @@
 		}
 	}
 	{
-		\Omega_
+		(
+		\expnils
 		{
-			\tylist
-			{
-				\csnum
-			}
+			\tynum
 		}
+		)
 	}
 	)
 }
-&& \\
+&
+\red
+\\
+% cons (sh N (wrong N str)) (nil N)
+\expcons
+{
+	(
+	\expsh
+	{
+		\csnum
+	}
+	{
+		(
+		\expwrongs
+		{
+			\tynum
+		}
+		{
+			\errnum
+		}
+		)
+	}
+	)
+}
+{
+	(
+	\expnils
+	{
+		\tynum
+	}
+	)
+}
+&
+\\
 \end{tabular}
 \caption{Scheme does not force the conversion of list construction operands.}
 \label{figlistfixed}
